# jgf

./: .env.template  Cargo.toml  Cross.toml  NPM_SETUP.md  README.md  jgf.json.example  pull_request_template.md
.github/workflows/: release_jgf.yml  release_jgf_final.yml  release_jgf_simple.yml  release_simple.yml
npm/jgf/: README.md  package.json
npm/jgf-darwin-arm64/: package.json
npm/jgf/scripts/: generate-packages.mjs
src/: config.rs  context.rs  error.rs  lib.rs  main.rs  utils.rs
src/cli/: mod.rs
src/cli/commands/: init.rs  mod.rs  pr.rs  start.rs  sync.rs  tickets.rs
src/git/: mod.rs  operations.rs
src/github/: client.rs  mod.rs  models.rs
src/jira/: client.rs  mod.rs  models.rs
