[package]
name = "jgf"
version = "0.1.2"
authors = ["Lee Jaeha <wogkdkrm112@gmail.com>"]
edition = "2024"
description = "Jira-GitHub Flow CLI tool for seamless project management"
license = "MIT"
repository = "https://github.com/jaehafe/jgf"
homepage = "https://github.com/jaehafe/jgf"
readme = "README.md"
keywords = ["jira", "github", "cli", "workflow", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
console = "0.15.8"
dotenv = "0.15.0"
git2 = "0.20.2"
indicatif = "0.18.0"
inquire = "0.7.5"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
